.k8s/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-api
  labels:
    app: project-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project-api
  template:
    metadata:
      labels:
        app: project-api
    spec:
      containers:
      - name: project-api
        image: project-api
        ports:
        - containerPort: 8080
