.k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: project-api
spec:
  type: ClusterIP
  selector:
    app: project-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
